{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 27,
  "lineage": "ebf8c878-c5d0-1f5d-6e55-a544d2a2b854",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071226ecf16aa7d96",
            "arn": "arn:aws:ec2:us-east-1:762233760360:instance/i-0a2989c7c502f943a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2989c7c502f943a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09bca96be3b2c0b8a",
            "private_dns": "ip-10-0-0-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.86",
            "public_ip": "3.239.170.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a16971bbec2265db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0380d30f610d4cf72",
            "tags": {
              "Name": "server1a"
            },
            "tags_all": {
              "Name": "server1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e43eec0f610951e8"
            ]
          },
          "dependencies": [
            "aws_security_group.TASK12_SG",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071226ecf16aa7d96",
            "arn": "arn:aws:ec2:us-east-1:762233760360:instance/i-090d5ebf6ccf934b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090d5ebf6ccf934b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa0082bbbb45d977",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "public_ip": "18.205.115.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01221361eb06eaea5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0103b2d9cff270254",
            "tags": {
              "Name": "server1b"
            },
            "tags_all": {
              "Name": "server1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e43eec0f610951e8"
            ]
          },
          "dependencies": [
            "aws_security_group.TASK12_SG",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071226ecf16aa7d96",
            "arn": "arn:aws:ec2:us-east-1:762233760360:instance/i-008cc0bcf5df13844",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008cc0bcf5df13844",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f39b0b6cb52606ea",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.40",
            "public_ip": "54.196.233.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01fea956b8cb97a2d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ee1696bc8521d51",
            "tags": {
              "Name": "server1c"
            },
            "tags_all": {
              "Name": "server1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e43eec0f610951e8"
            ]
          },
          "dependencies": [
            "aws_security_group.TASK12_SG",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TASK12_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:internet-gateway/igw-0ecbd53c892916aea",
            "id": "igw-0ecbd53c892916aea",
            "owner_id": "762233760360",
            "tags": {
              "Name": "TASK12-IGW"
            },
            "tags_all": {
              "Name": "TASK12-IGW"
            },
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "dependencies": [
            "aws_vpc.TASK12"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TASK12_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:route-table/rtb-09c0f81cf1c85fbb2",
            "id": "rtb-09c0f81cf1c85fbb2",
            "owner_id": "762233760360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecbd53c892916aea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TASK12-RT"
            },
            "tags_all": {
              "Name": "TASK12-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TASK12_IGW",
            "aws_vpc.TASK12"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d07b411dc72395d7",
            "route_table_id": "rtb-09c0f81cf1c85fbb2",
            "subnet_id": "subnet-0380d30f610d4cf72"
          },
          "dependencies": [
            "aws_internet_gateway.TASK12_IGW",
            "aws_route_table.TASK12_RT",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03535c90b315ed148",
            "route_table_id": "rtb-09c0f81cf1c85fbb2",
            "subnet_id": "subnet-0103b2d9cff270254"
          },
          "dependencies": [
            "aws_internet_gateway.TASK12_IGW",
            "aws_route_table.TASK12_RT",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070a29e2f43c88ade",
            "route_table_id": "rtb-09c0f81cf1c85fbb2",
            "subnet_id": "subnet-00ee1696bc8521d51"
          },
          "dependencies": [
            "aws_internet_gateway.TASK12_IGW",
            "aws_route_table.TASK12_RT",
            "aws_subnet.subnets",
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TASK12_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:security-group/sg-0e43eec0f610951e8",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e43eec0f610951e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TASK12-SECURITYGROUP",
            "name_prefix": "",
            "owner_id": "762233760360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TASK12-SG"
            },
            "tags_all": {
              "Name": "TASK12-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TASK12"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0380d30f610d4cf72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0380d30f610d4cf72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a"
            },
            "tags_all": {
              "Name": "subnet-a"
            },
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "dependencies": [
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-0103b2d9cff270254",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0103b2d9cff270254",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b"
            },
            "tags_all": {
              "Name": "subnet-b"
            },
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "dependencies": [
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:subnet/subnet-00ee1696bc8521d51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ee1696bc8521d51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233760360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-c"
            },
            "tags_all": {
              "Name": "subnet-c"
            },
            "vpc_id": "vpc-0ebc862e7e363dbd0"
          },
          "dependencies": [
            "aws_vpc.TASK12",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TASK12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233760360:vpc/vpc-0ebc862e7e363dbd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056476907fad0ca7f",
            "default_route_table_id": "rtb-05c6720711db570aa",
            "default_security_group_id": "sg-08b45a049217d283b",
            "dhcp_options_id": "dopt-05cbe90aed7798e72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebc862e7e363dbd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c6720711db570aa",
            "owner_id": "762233760360",
            "tags": {
              "Name": "Task-12-VPC"
            },
            "tags_all": {
              "Name": "Task-12-VPC"
            }
          }
        }
      ]
    }
  ]
}